# ktun_cleaning_robot

./: CMakeLists.txt  README.md  package.xml
config/: mission.yaml  navigation.rviz
launch/: house_qr.launch  nav.launch  sim.launch  slam.launch  task.launch  task_manager.launch
maps/: house.pgm  house.yaml
models/qr_bedroom/: model.config  model.sdf
models/qr_bedroom/materials/scripts/: qr.material
models/qr_corridor/: model.config  model.sdf
models/qr_corridor/materials/scripts/: qr.material
models/qr_kitchen/: model.config  model.sdf
models/qr_kitchen/materials/scripts/: qr.material
models/qr_livingroom/: model.config  model.sdf
models/qr_livingroom/materials/scripts/: qr.material
scripts/: room_cleaner.py  wall_follower.py
src/: qr_reader.py  task_manager.py
urdf/: turtlebot3_burger_camera.urdf.xacro  turtlebot3_burger_camera.urdf.xacro.save  turtlebot3_burger_camera.urdf.xacro.save.1  turtlebot3_burger_camera.urdf.xacro.save.2  turtlebot3_burger_camera.urdf.xacro.save.3
worlds/: turtlebot3_house_qr.world
